--- a/plan.html
+++ b/plan.html
@@ -84,8 +84,7 @@
 
     </div>
     <footer>
-        <p id="pagetop">
-            <a href="#top">ページの先頭へ戻る</a>
+        <p id="pagetop"><a href="#top">ページの先頭へ戻る</a>
         </p>
         <address> 東京都千代田区X-X-X 電話 0120-000-XXX 営業時間 11:00～20:00(水曜日定休)</address>
         <p id="copyright"> <small> copyright 2014 HOTEL IMPERIAL RESORT TOKYO All right reserved.</small></p>
