--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
     <div id="contents"></div>
     <footer>
         <p id="pagetop">
-            <a href="#top"></a>
+            <a href="#top">ページの先頭へ戻る</a>
         </p>
         <address> 東京都千代田区XXX,電話番号：０９０９００００９</address>
         <p id="copyright"> <small> copyright 2014 HOTEL IMPERIAL RESORT TOKYO All right reserved.</small></p>
+
     </footer>
-
-
+    <script src="js/slideshow.js"></script>
 </body>
 
 </html>
