--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <address> 東京都千代田区XXX,電話番号：０９０９００００９</address>
         <p id="copyright"> <small> copyright 2014 HOTEL IMPERIAL RESORT TOKYO All right reserved.</small></p>
 
-    </footer>
-    <script src="js/slideshow.js"></script>
+        <!-- </footer>
+    <script src="js/slideshow.js"></script> -->
 </body>
 
 </html>
